# lazytime

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
IMPLEMENTATION_STORIES/: 01_db_init.md  02_rule_loading.md  03_sway_daemon.md  04_popup_ui.md  05_cli.md  06_jira_sync.md  06_jira_sync_detailed.md  07_settings_tui.md  07_tui_trackings.md  08_tui_projects.md  09_rule_cache_reload.md  10_tests_ci.md  11_popup_egui_thread.md  12_tui_interactive_crud.md  13_sway_runtime_validation.md  14_jira_custom_field_hardening.md  15_extended_tests_and_integration.md  17_daemon_lock_resume.md  18_platform_backends.md  19_linux_desktop.md  20_windows_backend.md  21_macos_backend.md  22_ci.md  23_gui_egui.md  24_onboarding_first_run.md  25_visual_day.md
packaging/: com.lazytime.app.desktop
src/: cli.rs  config.rs  db.rs  jira.rs  jira_sync.rs  lib.rs  main.rs  popup.rs  rules.rs  secrets.rs  time.rs
src/daemon/: mod.rs  reload.rs  state.rs
src/gui/: app.rs  color.rs  mod.rs  style.rs  table.rs
src/gui/views/: current.rs  daemon.rs  jira_sync.rs  mod.rs  onboarding.rs  projects.rs  settings.rs  settings_tabs.rs  settings_working_hours.rs  trackings.rs  undo.rs  visual_day.rs
src/ipc/: client.rs  mod.rs  server.rs  tcp.rs  unix.rs
src/platform/: atspi.rs  ax.rs  cgwindow.rs  desktop.rs  linux_lock.rs  macos.rs  macos_lock.rs  mod.rs  sway.rs  types.rs  windows.rs  x11.rs
src/tui/: current.rs  daemon_control.rs  jira_sync.rs  mod.rs  projects.rs  projects_modal.rs  quotes.rs  settings.rs  statusbar.rs  trackings.rs  trackings_cleanup.rs  trackings_modal.rs  trackings_modal_actions.rs  trackings_rows.rs  trackings_storno.rs
tests/: cli_smoke.rs  config_auto_create.rs  daemon_integration.rs  daemon_state.rs  db_lock.rs  db_migrations.rs  db_storno.rs  ipc_notify.rs  jira_client.rs  popup_thread.rs  report_output.rs  rules.rs  storno_comment.rs  trackings_cleanup.rs
tools/: gen-macos-icon.swift  notify_reload.sh  package-deb.sh  package-macos.sh  package-rpm.sh  package-tar.sh
