[package]
name = "lazytime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
ratatui = "0.29"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
crossterm = "0.29"
swayipc = { version = "3.0", optional = true }
atty = "0.2"
egui_table = "0.7"
egui_extras = { version = "0.33", features = ["datepicker"] }
egui_dock = "0.18.0"
egui-phosphor = "0.11"
egui_phosphor_icons = "0.2"
dbus = { version = "0.9", optional = true }
winit = { version = "0.30", optional = true }
x11rb = { version = "0.13", optional = true }
windows = { version = "0.58", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_RemoteDesktop", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1.5"

[features]
default = ["backend-sway", "ipc-unix", "popup-ui", "popup-output-placement"]
backend-linux = ["dep:dbus", "dep:x11rb"]
backend-sway = ["backend-linux", "dep:swayipc"]
backend-hyprland = ["backend-linux"]
backend-gnome = ["backend-linux"]
backend-plasma = ["backend-linux"]
backend-macos = []
backend-windows = ["dep:windows"]
ipc-unix = []
ipc-tcp = []
popup-ui = ["dep:eframe", "dep:winit"]
popup-output-placement = []

[target.'cfg(target_os = "linux")'.dependencies.eframe]
version = "0.33"
optional = true
default-features = false
features = ["wayland", "x11", "default_fonts", "glow"]

[target.'cfg(target_os = "windows")'.dependencies.eframe]
version = "0.33"
optional = true
default-features = false
features = ["default_fonts", "glow"]

[target.'cfg(target_os = "macos")'.dependencies.eframe]
version = "0.33"
optional = true
default-features = false
features = ["default_fonts", "glow"]

[dev-dependencies]
tempfile = "3.18"

[[bin]]
name = "lazytime"
path = "src/main.rs"
